# causality

./: .gitignore  .gitmodules  CMakeLists.txt
causality/: CMakeLists.txt
causality/include/: ca_api.h  ca_components.h  causality.h
causality/src/: ca_internal.h  causality.c  pch.h  thread.c  window.c  window.h
causality/src/core/: ca_internal.h  causality.c  event.c  event.h  gpu.c  thread.c  thread.h
causality/src/platform/: window.c  window.h
causality/src/renderer/: embedded_font.h  font.c  font.h  image.c  image.h  pipeline.c  pipeline.h  renderer.c  renderer.h  shader.c  shader.h  swapchain.c  swapchain.h  viewport.c  viewport.h
causality/src/ui/: ca_theme.h  css.c  css.h  layout.c  layout.h  node.c  node.h  paint.c  paint.h  state.c  state.h  style.c  style.h  title_bar.c  title_bar.h  ui.c  ui.h  widget.c  widget.h
sandbox/: CMakeLists.txt
sandbox/src/: main.c
